# Real_Time_Edge_Detection_Viewer

./: readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetection/: MainActivity.kt  MyGLRenderer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  package.json  tsconfig.json
web/src/: index.ts
